--- a/3_CV/applicantCV/CV.tex
+++ b/3_CV/applicantCV/CV.tex
@@ -57,9 +57,9 @@ Minors in quantum and statistical physics, continuum mechanics
 \end{rSection}
 
 \begin{rSection}{Work experience}
-{\bf Laboratoire Jacques-Louis Lions, Inria Alpines team, Paris} \hfill {\em Jan. 2020 - Present} \\
+{\bf Laboratoire Jacques-Louis Lions, Inria Alpines team, Paris} \hfill {\em Jan. 2020 - June 2020} \\
 Post-doc, supervised by Xavier Claeys. Working on combinations of additive Schwarz and Calder\'{o}n preconditioners.\\
-{\bf Laboratoire des systèmes perceptifs, ENS, Paris} \hfill {\em January 2015 - July 2015} 
+{\bf Laboratoire des systèmes perceptifs, ENS, Paris} \hfill {\em Jan. 2015 - July 2015} 
 \\ Research internship in behavioral neurosciences.\\ 
 {\bf ESI-Group, San Diego}
 \hfill {\em March - July 2013} \\
