--- a/3_CV/applicantCV/CV.tex
+++ b/3_CV/applicantCV/CV.tex
@@ -26,9 +26,11 @@
 \newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}}
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 \name{MARTIN AVERSENG} % Your name
-\address{20 rue de l'Armorique, 75015 Paris}
+\address{Weinbergstrasse 62, 8006 Zurich}
 \address{(+33)622854025 \\ martin.averseng@gmail.com} % Your phone number and email
 \usepackage[utf8]{inputenc}
+\usepackage{graphicx}
+
 \begin{document}
 
 %----------------------------------------------------------------------------------------
