--- a/4_careerGoalApplicant/A04_CareerGoals_Averseng.tex
+++ b/4_careerGoalApplicant/A04_CareerGoals_Averseng.tex
@@ -8,18 +8,16 @@
 
 \maketitle
 
-Sketch:
+Here is a brief outline of my career goals.
+Working at ETH with Pr. Hiptmair and his team is a great opportunity for me to work with one of the leading teams in my field. Especially, recent breakthroughs by Hiptmair, Claeys and Urzua-Torres have opened great perspectives and I will now be part of this innovative dynamic. I will consolidate my research skills, extend my reputation and network, together with getting experience in teaching. 
 
-\begin{itemize}
-	\item[-] 2 or 3 years post-doc at ETH. 
-	\item[-] Acquire reputation in the field of integral equation. 
-	\item[-] Acquire experience in teaching (particularly attracted to the teaching component of my career). 
-	\item[-] Develop network by collaborating with important people in this field (ETH is a good place for that). 
-	\item[-] Develop some knowledge in the English school: semi-classical analysis, high-frequency asymptotic. 
-	\item[-] Publish at least 5 papers during the 2 years at ETH.
-	\item[-] After those 2-3 years, possibly additional post-doc.
-	\item[-] Obtain a full position as professor. Will apply to french institutions like CNRS and INRIA. 
-	\item[-] Ambitious about medical applications: develop partnerships with hospitals and medical company, focus on medical applications in my research. Examples: Ammari, Andriulli. 
-\end{itemize}
+In the mean time, I will also attend the conferences organized each year about Boudary Element Methods and present the new developments of my work. I am greatly interested but not yet very familiar with the work of the English school in integral equations. I will attend an important conference in the university of Bath in 2021 on the topic of semi-classical analysis. I believe that this mathematical tool could play an essential role in the field of integral equation in the coming future. 
+
+
+Before leaving ETH, my objective is to publish at least 6 papers in peer-reviewed journals. Such a track record will allow me to apply to the top french research institutions such as CNRS and INRIA. After obtaining a full research position in France, I will follow the usual steps to become Professor. 
+As I progress in my career, I plan to put gradually more emphasis on the real-world application of my work. I am especially attracted to the medical applications of the theory of integral equations. In this aim, I will reinforce my contacts with Pr. Andriulli who is one of the international experts on cerebral imagery using integral equations. Furthermore, Pr. Ammari, working in the same team as Pr. Hiptmair, is a renowned expert on medical imagery whom I will have the opportunity to meet during my stay at ETH. 
+
+
+
 
 \end{document}
