--- a/2_ProjectDescription/2_ProjectDetails/A02.2_ProjectDetails_averseng.tex
+++ b/2_ProjectDescription/2_ProjectDetails/A02.2_ProjectDetails_averseng.tex
@@ -2,11 +2,17 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{color}
+\usepackage{setspace}
 %opening
 \title{Project details}
 \date{}
 \author{}
-
+\let\OLDthebibliography\thebibliography
+\renewcommand\thebibliography[1]{
+	\OLDthebibliography{#1}
+	\setlength{\parskip}{0pt}
+	\setlength{\itemsep}{0pt plus 0.5ex}
+}
 %(rationale for the proposed work, goals, experimental approach and/or methods, milestones, expected output, specific role of the ETH Fellow, timetable; not to exceed 5 pages)
 
 
@@ -14,15 +20,15 @@
 
 \maketitle
 
-\section{Introduction and notation}
+\section{Introduction}
 
 
-\subsection*{Scattering problems}
+\subsection*{Scattering problems}	
 
 Assume that an incident harmonic wave of frequency $k$ is sent to an obstacle, or a material heterogeneity (an airplane in the sky, a crack in a material, a tumor in the body...). The presence of the obstacle generates a scattered field propagating away from this heterogeneity. The shape and intensity of this scattered field depends essentially on the location, geometry and material properties of the scatterer. In many contexts it is fundamental to predict by numerical computation, with high fidelity and in a short time, the scattered field from the \textit{a priori} knowledge of the scattering object and incident wave. 
 
 Scattering problems arise for several different types of waves, by increasing level of complexity:
-\begin{itemize}
+\begin{itemize}\itemsep-.2em 
 	\item[-] Acoustics, sound waves in dimensions 2 and 3.
 	\item[-] Electromagnetism, Maxwell equations
 	\item[-] Linear elasticity. 
@@ -31,149 +37,225 @@ Usually, practical applications involve the last two kinds of waves, at high fre
 
 \subsection*{Integral equations}
 
-The mathematical tools most adapted to this task are the formalism of integral equations and the boundary element method (reference monographs include e.g. \cite{mclean2000strongly,sauter2010boundary}). Consider the obstacle to be modeled by a domain $\Omega \subset \mathbb{R}^n$ ($n=2,3$) and let $\Gamma = \partial \Omega$ be its boundary. Then, the scattered $u_s$ field is given by the Green's formula
+Among the standard mathematical tools most adapted to this task are the formalism of integral equations and the Galerkin boundary element method (BEM). Reference monographs include e.g. \cite{mclean2000strongly,sauter2010boundary}). The discretization of integral equations by BEM leads to dense linear systems, which, in real-life applications, often have more than $10^6$ unknowns. This makes it prohibitive to solve the linear system by a direct method such as LU factorization, and instead, it is classical to use iterative methods such as GMRES \cite{saad1986gmres}.
 
-\[\forall x \in \mathbb{R}^n \setminus{\Omega}, \quad u_s(x) =  \int_{\Gamma} \dfrac{\partial G_k}{\partial n}(x,y) \mu(y) -  G_k(x,y) \lambda(y) d\Gamma(y)\, \] 
-where $G_k(x,y)$ is an explicit function of $k$, $x$ and $y$, $n$ is the surface normal vector on $\Gamma$ and $\lambda$ and $\mu$ are unknown functions, or ``surface densities", defined on $\Gamma$. Those unknowns can be determined by solving some integral equations. Many equivalent integral equations are available depending on the situation and the requirements of the method. For instance, one such equation, the single-layer integral equation, reads
-\begin{equation}
-	\label{Slambda}
- 	\forall x \in \Gamma, \quad \int_{\Gamma} G_k(x,y) \lambda(y) = -u_{inc}(x)
-\end{equation}
-where $u_{inc}$ is the (known) incident wave. 
+For the so-called first-kind integral equations, powerful mesh-related convergence results are well-known, but the linear systems are notoriously ill-conditioned, causing the iterative solvers to progress very slowly. Active research has been devoted to this issue in the past 30 years. On the one hand, some teams have targeted the iteration (matrix-vector product) time by developing compression and acceleration methods e.g. Fast Multipole Methods \cite{greengard1987fast} and H-matrices \cite{hackbusch1999sparse}. On the other hand, other teams have focused on finding suitable preconditioners. In this branch, \cite{steinbach1998construction} was a pioneer work. 
 
-\subsection*{Boundary element methods}
-
-Eq.~\eqref{Slambda} is a functional equation whose unknown $\lambda$ is sought in a infinite-dimensional Hilbert space. In practice, one looks for an approximation of the exact solution $\lambda$, and one of the standard procedures to do so is the boundary element method. A surface mesh of the scattering object is designed, and $\lambda$ is sought in the form of a linear combination of low-order piecewise polynomial functions on this surface mesh. 
-
-{\color{red} Insert mesh image.}
-
-The vector $U$ of the coefficients of the piecewise polynomial approximation which minimize the approximation error (in a norm equivalent to the energy norm) can be found by solving a linear system of the form $A U = L$ where
-\[A_{i,j} = \iint_{\Gamma\times \Gamma} G_k(x,y) \phi_i(x) \phi_j(y) \,dx\,dy\,,\quad  L_i = -\int_{\Gamma} \phi_i(x) u_{inc}(x)\,dx\,. \]
-Increasing the mesh density decreases the approximation error, which tends to $0$ in the limit of an infinite mesh density. Note that unlike in  Finite Element Methods, $A$ is a dense matrix. 
-
-\subsection*{Iterative solvers}
-
-In real life applications, it is customary to have at least $10^6$ unknowns, in which case the full matrix $A$ does not fit in standard laptops RAM memories. Compression and acceleration methods are used to compute matrix vector products. The direct inversion of $A$ for example by LU factorization, is prohibitive. Instead, it is now standard to resort to iterative methods, such as GMRES \cite{saad1986gmres}. In each iteration, a matrix-vector product is computed, and the number of iterations of the method is unknown and depends on the conditioning of $A$. In the past 30 years, active research has been devoted on the one hand, to designing efficient compression and acceleration methods, e.g. Fast Multipole Methods \cite{greengard1987fast} and H-matrices \cite{hackbusch1999sparse}. More recently, a class of algorithms based on non-uniform fourier transform have been proposed, and the applicant has contributed to this field \cite{averseng2017fast}. On the other hand, active research is devoted to finding methods for reducing the number of GMRES iterations by preconditioning the matrix $A$ (see e.g. \cite{steinbach1998construction}).
-
-\section{Current challenges}
+Second-kind integral equations on the other hand are known to enjoy better stability with respect to discretization parameters, and for this reason, in many instances, researchers have tried to avoid the use of first-kind integral equations despite their simplicity. Nevertheless, the approximation properties of the second-kind formulations are less clear, and they degenerate for complex scatterers such as screens. 
 
 
-\subsection*{High-frequency preconditioners}
+\section{Recent advances and open problems}
 
-In the situation when the scattering obstacle is smooth, very efficient methods both for matrix compression and preconditioning have been developed and analyzed. One of the most successful approaches is that initiated by Steinbach et al. in \cite{steinbach1998construction}, and now referred to as operator preconditioning \cite{hiptmair2006operator}. With this mathematical theory, one is able to build preconditioners with provably uniform condition number with respect to the discretization parameters. However, a uniform dependence of the condition number with respect to the wave frequency has not yet been achieved. Among the efficient practical approaches, one is to use of heuristic preconditioners based on pseudo-differential theory, e.g. \cite{antoine2007generalized}. Providing solid theoretical foundations for those method would be a significant breakthrough, and would probably allow to extend them to more complex applications. The applicant will attend an important conference on this topic at the university of Bath in 2021. 
+Let us survey some recent advances in the field of integral equations, and related open problems.
 
-\subsection*{Complex scatterers}
+\subsection*{Scattering by complex obstacles}
 
-In particular, non-smooth scatterers (such as containing edges or corners) pose serious difficulties both at the practical level (the standard methods converge very slowly) and the mathematical level. The analytic framework needs to be adapted to take into account the particular singularity of the scatterer. Intense research is currently devoted to wave propagation around screens and cracks. In parallel, previous work in the host laboratory has been devoted to the treatment of even more complex scatterers called ``multi-screens" \cite{claeys2013integral,claeys2020quotient}, which can deal with the very practically important case of junction points. In this framework, preconditioning is a crucial and completely open question.  
+The obstacles become complex when they are not smooth domains or Lipschitz domains, a class of scatterers that has become very classical with \cite{mclean2000strongly}. Problems arise when singularities are present (edges, conical points). There is a particular attention devoted to screens and cracks, which are the first example of non-Lipschitz domains \cite{bruno2013high,gimperlein2019optimal,hiptmair2018closed,hiptmair2019preconditioning,ramaciotti2017some}. In this case, the formulation of well-posed integral equations in a proper mathematical framework is well-understood since \cite{stephan1984augmented,wendland1990hypersingular}, and the recent advances lie in the proposition of more efficient numerical methods, including high-order approximation schemes and provably ``optimal preconditioners". Additionally, some more challenging geometries are considered, including multi-screens \cite{claeys2013integral,claeys2020quotient} and fractal screens \cite{chandlerWilde2017sobolev}. In those cases, the achievement was to obtain well-posed integral equations and study their theoretical properties. For those complex geometries, many natural questions remain open, e.g. convergence of the numerical methods, singularity analysis and efficient preconditioning. 
 
- 
-\section{Open perspectives}
+\subsection*{Dependance in the frequency}
 
-\subsection*{High-frequency preconditioners for screens}
+Although optimal preconditioners are by now available for scattering problems by Lipschitz domains and screens, \cite{steinbach1998construction,hiptmair2006operator}, it is a difficult matter to analyze the preconditioning performance in terms of the frequency number. The English school has been concerned with theoretical asymptotic analysis of the condition number of the classical integral equations without preconditioners \cite{chandler2020high} and the use of high-frequency solutions as trial functions in the Galerkin setting to improve the convergence rate \cite{chandlerWilde2015high}. Besides the popular Calder\'{o}n preconditioners \cite{christiansen2000preconditionneurs,christiansen2002preconditioner}, which have recently been adapted to the screen context \cite{bruno2012second}  ``analytic preconditioners" based on pseudo-differential calculus which exhibit good frequency robustness \cite{antoine2007generalized} were proposed, which entertain a close link with regularized combined-field integral equations \cite{buffa2005regularized}. Although the frequency robustness properties are clear and extensively surveyed e.g. \cite{boubendir2014well}, there is no mathematical theory adapted to the study of this asymptotic robustness as to now. There is a feeling in the community that pseudo-differential analysis, which is often involved in constructing those robust preconditioners, should also play a role in providing quantitative estimates for this frequency dependence buch such desirable analysis has not been achieved yet.
 
-In his PhD thesis, the applicant ({\color{red} is this way of referring to myself OK ?}) has developed a new method for developing efficient preconditioners for screens in 2D for acoustic problems at high frequency, a work that will soon be published in Numerische Mathematik ({\color{red} should I say that ?}). One particular aspect of this work is that it successfully adapts the heuristic pseudo-differential approach that was previously only efficient for smooth scatterers. 
 
-For now, the applications tackled are very academic, but the method could be expanded into a much more general and versatile framework. First of all, theoretical foundations and promising preliminary numerical tests have been done during the thesis for the application of the method in 3D on disk screens. It will be one of the early objectives of this post-doc to complete this work and publish it. Once this is done, it will be straightforward to extend this work to electromagnetic equations in 3D. This generalization would be a natural combination of the works of the applicant and the host professor \cite{hiptmair2019preconditioning}. This would be without doubts a significant achievement in the current research. 
+
+\subsection*{Own work}
+
+During my PhD thesis, I have contributed to the research on compression and acceleration methods for the linear systems coming from boundary element methods \cite{averseng2017fast}. 
+On the other hand, I worked on new high-frequency preconditioners for acoustics integral equations on screens in dimension 2. The first publication on this topic \cite{alouges2019new} presents the analytical framework and numerical testing. The new preconditioners are analogs of those of \cite{antoine2007generalized} and present similar frequency robustness, but this time on a screen context. A significant advantage of the method is that the preconditioners obtained are ``quasi-local" in the sense that their use involve only sparse matrix, as opposed to Calder\'{o}n preconditioners which are dense and require an additional compression steps. On the other hand, \cite{averseng2019pseudo} is a more in-depth theoretical paper in which I develop a new type of pseudo-differential calculus on open curves that was used to design the preconditioners introduced in the first paper. This pseudo-differential calculus features the possibility of computing symbols of the layer potentials up to arbitrary orders and is probably a first step in assessing the frequency robustness of this approach. 
+
+
+
+\section{Goals and research plan}
+
+
+\subsection*{Frequency-robust preconditioners on 3D screens}
+
+Although the numerical method published in \cite{alouges2019new} is only adapted to 2-dimensional contexts, generalizations to 3-dimensions seem possible and have been attempted in the last chapter of my thesis, with promising results. I will continue my research on this topic in order to make a publication for scalar scattering problems by screens in 3D. In turn, a natural extension to electromagnetic scattering will be possible, as a natural combination of my work and the host laboratory \cite{hiptmair2019preconditioning}. 
 
 \subsection*{Conformal preconditioners}
 
-Another very natural generalization of the work of the applicant is the treatment of polygonal scatterers in 2D. We have recently found a mathematical identity that draws a close link between preconditioners and conformal mappings, which hints at completely new and powerful preconditioners adapted to corner singularities. A middle-term objective of this research project will be to analyze rigorously this idea and implement it efficiently. The expected output is a method that completely solves the question of polygons in 2D at any frequency, which would be a significant achievement in the domain. In addition, it might be possible to transport the pseudo-differential to the polygon via the conformal mapping, which would be a very interesting novelty. 
+Another very natural generalization of my thesis work is the treatment of polygonal scatterers in 2D. We have recently found a mathematical identity that draws a close link between preconditioners and conformal mappings, which hints at completely new and powerful preconditioners adapted to corner singularities. A middle-term objective of this research project will be to analyze rigorously this idea and implement it efficiently. The expected output is a method that completely solves the question of polygons in 2D at any frequency, which would be a significant achievement in the domain. In addition, it might be possible to transport the pseudo-differential to the polygon via the conformal mapping, which would be a very interesting novelty. 
 
 This work would also open some possible breakthrough for 3D singularities such as wedges, which are omnipresent in practical applications. Exploring this idea is a long-term objective of this project.
 
 
 \subsection*{Integral equations on multi-screens}
 
-One of the most promising ideas for this research is the possibility of formulating ``combined-field" integral equations for multi-screens. Combined field formulations are well-known for smooth scatterers and have been introduced more than 50 years ago \cite{brakhage1965dirichletsehe} as a way to guarantee the well-posedness of the equation at any wave frequency. Roughly speaking, the idea was to combine two popular ansatz (a simple layer and a double layer) for the scattered field, instead of using them separately. Additionally, upon suitable choice of the coupling parameter, this has the feature to improve the conditioning of the resulting linear system. 
-
-For screens, combined field integral equations have been abandoned, because they degenerate when the obstacle no longer has interior. 
+One of the most promising ideas for this research is the possibility of formulating ``combined-field" integral equations for multi-screens. Combined field formulations are well-known for smooth scatterers and have been introduced more than 50 years ago \cite{brakhage1965dirichletsehe} as a way to guarantee the well-posedness of the equation at any wave frequency. For screens, combined field integral equations have been abandoned, because they degenerate when the obstacle no longer has interior. 
 However, we have recently discovered that the formalism of multi-screens restores a ``virtual" interior to the obstacle, and a combined-field equation can be formulated mathematically without difficulty. Preliminary numerical simulations have shown the power of this idea and it will be an immediate objective of this project to implement this idea and analyze it rigorously. This would lead without doubts to an important publication in our field. 
 
-Lastly, after his thesis, the applicant has done a short post-doctorate with Xavier Claeys, a former student of the host professor, on the topic of preconditioning integral equations on multi-screens using a domain decomposition approach. The resulting method is expected to be very robust and versatile. This collaboration will be continued during the post-doc and eventually lead to a publication. 
+Lastly, after his thesis, the applicant has done a 6 month post-doctorate with Xavier Claeys, a former student of the host professor, on the topic of preconditioning integral equations on multi-screens using a domain decomposition approach. The resulting method is expected to be very robust and versatile. This collaboration will be continued during the post-doc and eventually lead to a publication. 
 
 
-\begin{thebibliography}{0}
-	
-	\bibitem{antoine2007generalized}
-	Antoine, X., Darbas, M.:
-	\newblock Generalized combined field integral equations for the iterative
-	solution of the three-dimensional helmholtz equation.
-	\newblock {\em ESAIM: Mathematical Modelling and Numerical Analysis}
-	41(1):147--167, 2007.
-	
-	\bibitem{averseng2017fast}
-	Averseng, M.:
-	\newblock Fast discrete convolution in $\mathbb {R}^{2} $ with radial kernels using non-uniform fast Fourier transform with nonequispaced frequencies. 
-	\newblock {\em Numerical Algorithms}, 1--24 (2019) 
-	
-	\bibitem{brakhage1965dirichletsehe}
-	A.~Brakhage, P.~Werner.
-	\newblock Uber das dirichletsehe aussenraumproblem fur die Helmholtzsche Schwingungsgleichung
-	\newblock {\em Archive fur Mathematik} 16:325–329, 1965
-	
-	
-	\bibitem{claeys2013integral}
-	X.~Claeys and R.~Hiptmair.
-	\newblock Integral equations on multi-screens
-	\newblock {\em Integral equations and operator theory} 77(2): 167--197, 2013.
-	
-	\bibitem{claeys2020quotient}
-	X.~Claeys, L.~Giacomel, R. Hiptmair and C.~Urzua-Torres.
-	\newblock Quotient-Space Boundary Element Methods for Scattering at Complex Screens.
-	\newblock {\em SAM Research Report} 2020, ETH Zurich.
-	
-	
-	\bibitem{greengard1987fast}
-	Greengard, L., Rokhlin, V.:
-	\newblock A fast algorithm for particle simulations
-	\newblock {\em Journal of computational physics} 73(2):325--348, 1987.
-	
-	\bibitem{hiptmair2006operator}
-	Hiptmair., R.:
-	\newblock Operator preconditioning.
-	\newblock {\em Computers and mathematics with Applications} 52(5):699--706, 2006.
-	
-	
-	\bibitem{hiptmair2019preconditioning}
-	R.~Hiptmair and C.~Urzua Torres.
-	Preconditioning the EFIE on Screens
-	\newblock {\em SAM Research Report} 2019, ETH Zurich.
-	
-	\bibitem{mclean2000strongly}
-	W.~C.~H. McLean.
-	\newblock {\em Strongly elliptic systems and boundary integral equations}.
-	\newblock Cambridge university press, 2000.
-	
-	\bibitem{saad1986gmres}
-	Y.~Saad and M.~H. Schultz.
-	\newblock GMRES: A generalized minimal residual algorithm for solving
-	nonsymmetric linear systems.
-	\newblock {\em SIAM Journal on scientific and statistical computing},
-	7(3):856--869, 1986.
-	
-	\bibitem{sauter2010boundary}
-	S.~Sauter and C.~Schwab.
-	\newblock {\em Boundary Element Methods}
-	\newblock Springer 2010.
-	
-	
-	\bibitem{hackbusch1999sparse}
-	W.~Hackbusch.
-	\newblock A sparse matrix arithmetic based on H-matrices. Part I: Introduction to H-matrices.
-	\newblock {\em Computing} 62(2):89--108, 1999.
-	
-	\bibitem{steinbach1998construction}
-	O.~Steinbach and W.~L. Wendland.
-	\newblock The construction of some efficient preconditioners in the boundary
-	element method.
-	\newblock {\em Advances in Computational Mathematics}, 9(1-2):191--216, 1998.
-	
-	
-\bibitem{BrakhageWerner}
-	A.~Brakhage, P.~Werner.
-	\newblock Uber das dirichletsehe aussenraumproblem fur die Helmholtzsche Schwingungsgleichung
-	\newblock {\em Archive fur Mathematik} 16:325–329, 1965
-	
-\end{thebibliography}
+\section{Timetable}
+
+A timetable of the research project can be proposed as follows:
+\begin{itemize}\itemsep-0.2em 
+	\item[-] Submission of the paper on preconditioners for 3D screens for scalar waves by December 2020.
+	\item[-] Submission of the paper on preconditioners for 3D screens for electromagnetic waves by March 2021.
+	\item[-] Submission of the conformal preconditioners paper by July 2021.
+	\item[-] In parallel of those, work on the combined-field multi-screens formulations, expected publication by end of 2021. 
+	\item[-] Also in parallel, continued work on the additive Schwarz preconditioners and publication before end of 2021.
+\end{itemize}
+\begin{scriptsize}
+	\begin{thebibliography}{0}
+		
+		\bibitem{alouges2019new}
+		F.~Alouges and M.~Averseng.
+		\newblock New preconditioners for Laplace and Helmholtz integral equations on open curves: Analytical framework and Numerical results. 
+		\newblock Accepted for publication in {\em Numerische Mathematik}, 2020.
+		
+		\bibitem{antoine2007generalized}
+		X.~Antoine and M.~Darbas.
+		\newblock Generalized combined field integral equations for the iterative
+		solution of the three-dimensional helmholtz equation.
+		\newblock {\em ESAIM: Mathematical Modelling and Numerical Analysis}
+		41(1):147--167, 2007.
+		
+		\bibitem{averseng2017fast}
+		M.~Averseng.
+		\newblock Fast discrete convolution in $\mathbb {R}^{2} $ with radial kernels using non-uniform fast Fourier transform with nonequispaced frequencies. 
+		\newblock {\em Numerical Algorithms} 83(1):33--56, 2020.
+		
+		\bibitem{averseng2019pseudo}
+		M.~Averseng. 
+		\newblock Pseudo-differential analysis of the Helmholtz layer potentials on open curves. 
+		\newblock {\em arXiv} preprint:1905.13604.
+		
+		\bibitem{boubendir2014well}
+		Y.~Boubendir and C.~Turc.
+		\newblock Well-conditioned boundary integral equation formulations for the solution of high-frequency electromagnetic scattering problems.
+		\newblock {\em Computers \& Mathematics with Applications} 67(10) 1772--1805, 2014.
+		
+		\bibitem{brakhage1965dirichletsehe}
+		A.~Brakhage, P.~Werner.
+		\newblock Uber das dirichletsehe aussenraumproblem fur die Helmholtzsche Schwingungsgleichung
+		\newblock {\em Archive fur Mathematik} 16:325–329, 1965.
+		
+		\bibitem{bruno2012second}
+		O.~P.~Bruno and S.~K.~Lintner.
+		\newblock Second-kind integral solvers for TE and TM problems of diffraction by open arcs.
+		\newblock {\em Radio Science} 47(6):1--13, 2012.
+		
+		\bibitem{bruno2013high}
+		O.~P.~Bruno and S.~K.~Lintner.
+		A high-order integral solver for scalar problems of diffraction by screens and apertures in three-dimensional space.
+		\newblock {\em Journal of Computational Physics} 252:250--274, 2013.
+		
+		\bibitem{buffa2005regularized}
+		A.~Buffa and R.~Hiptmair.
+		\newblock Regularized combined field integral equations.
+		\newblock {\em Numerische Mathematik} 100(1):1--19, 2005.	
+		
+		\bibitem{christiansen2000preconditionneurs}
+		S.~H.~Christiansen and J.~C.~Nédélec.
+		\newblock Des préconditionneurs pour la résolution numérique des équations intégrales de frontière de l'acoustique.
+		\newblock {\em Comptes Rendus de l'Académie des Sciences-Series I-Mathematics}  330(7):617--622, 2000.
+		
+		\bibitem{christiansen2002preconditioner}
+		S.~H.~Christiansen and J.~C.~Nédélec.
+		\newblock A preconditioner for the electric field integral equation based on Calderon formulas.
+		\newblock {\em SIAM journal on numerical analysis}  40(3):1100--1135, 2002.
+		
+		\bibitem{chandlerWilde2015high}
+		S.~N.~Chandler-Wilde, S.~N.~Hewett, D.~P.~ Langdon and A.~Twigger.
+		\newblock A high frequency boundary element method for scattering by a class of nonconvex obstacles.
+		\newblock {\em Numerische Mathematik} 129(4):647--689, 2015.
+		
+		\bibitem{chandlerWilde2017sobolev}
+		S.~N.~ Chandler-Wilde, D.~P.~ Hewett and A.~Moiola.
+		\newblock Sobolev Spaces on Non-Lipschitz Subsets of ${\mathbb {R}}^n$ with Application to Boundary Integral Equations on Fractal Screens. 
+		\newblock {\em Integral Equations and Operator Theory} 87(2):179--224, 2017.
+		
+		\bibitem{chandler2020high}
+		S.~N.~ Chandler-Wilde, E.~Spence, A.~Gibbs and V.~P.~ Smyshlyaev.
+		\newblock High-frequency bounds for the Helmholtz equation under parabolic trapping and applications in numerical analysis.
+		\newblock {\em SIAM Journal on Mathematical Analysis}52(1):845--893, 2020.	
+		
+		\bibitem{claeys2013integral}
+		X.~Claeys and R.~Hiptmair.
+		\newblock Integral equations on multi-screens
+		\newblock {\em Integral equations and operator theory} 77(2): 167--197, 2013.
+		
+		\bibitem{claeys2020quotient}
+		X.~Claeys, L.~Giacomel, R. Hiptmair and C.~Urzua-Torres.
+		\newblock Quotient-Space Boundary Element Methods for Scattering at Complex Screens.
+		\newblock {\em SAM Research Report} 2020, ETH Zurich.
+		
+		\bibitem{gimperlein2019optimal}
+		H.~Gimperlein, J.~Stocek and C. Urzua-Torres.
+		\newblock Optimal operator preconditioning for pseudodifferential boundary problems.
+		\newblock {\em arXiv} preprint 1905.03846, 2019.
+		
+		\bibitem{greengard1987fast}
+		Greengard, L., Rokhlin, V.:
+		\newblock A fast algorithm for particle simulations
+		\newblock {\em Journal of computational physics} 73(2):325--348, 1987.
+		
+		\bibitem{hackbusch1999sparse}
+		W.~Hackbusch.
+		\newblock A sparse matrix arithmetic based on H-matrices. Part I: Introduction to H-matrices.
+		\newblock {\em Computing} 62(2):89--108, 1999.
+		
+		\bibitem{hiptmair2006operator}
+		R.~Hiptmair.
+		\newblock Operator preconditioning.
+		\newblock {\em Computers and mathematics with Applications} 52(5):699--706, 2006.
+		
+		\bibitem{hiptmair2018closed}
+		R.~Hiptmair, C.~Jerez-Hanckes and C. Urzua-Torres.
+		\newblock Closed-form inverses of the weakly singular and hypersingular operators on disks.
+		\newblock {\em Integral Equations and Operator Theory} 90(1), 2018.
+		
+		
+		\bibitem{hiptmair2019preconditioning}
+		R.~Hiptmair and C.~Urzua Torres.
+		Preconditioning the EFIE on Screens
+		\newblock {\em SAM Research Report} 2019, ETH Zurich.
+		
+		\bibitem{mclean2000strongly}
+		W.~C.~H. McLean.
+		\newblock {\em Strongly elliptic systems and boundary integral equations}.
+		\newblock Cambridge university press, 2000.
+		
+		\bibitem{ramaciotti2017some}
+		J.~C.~Nédélec and P.~Ramaciotti.
+		\newblock About some boundary integral operators on the unit disk related to the Laplace equation
+		\newblock {\em SIAM Journal on Numerical Analysis} 55(4):1892--1914, 2017.
+		
+		
+		\bibitem{saad1986gmres}
+		Y.~Saad and M.~H. Schultz.
+		\newblock GMRES: A generalized minimal residual algorithm for solving
+		nonsymmetric linear systems.
+		\newblock {\em SIAM Journal on scientific and statistical computing},
+		7(3):856--869, 1986.
+		
+		\bibitem{sauter2010boundary}
+		S.~Sauter and C.~Schwab.
+		\newblock {\em Boundary Element Methods}
+		\newblock Springer 2010.
+		
+		\bibitem{stephan1984augmented}
+		E.~P.~Stephan and W.~L.~Wendland.
+		\newblock An augmented Galerkin procedure for the boundary integral method applied to two-dimensional screen and crack problems
+		\newblock {\em Applicable Analysis} 18(3):183--219, 1984.
+		
+		
+		
+		
+		\bibitem{steinbach1998construction}
+		O.~Steinbach and W.~L. Wendland.
+		\newblock The construction of some efficient preconditioners in the boundary
+		element method.
+		\newblock {\em Advances in Computational Mathematics} 9(1-2):191--216, 1998.
+		
+		\bibitem{wendland1990hypersingular}
+		\newblock A hypersingular boundary integral method for two-dimensional screen and crack problems.
+		\newblock {\em Archive for rational mechanics and analysis} 112(4):363--390, 1990.
+	\end{thebibliography}
+\end{scriptsize}
+
+
 
 \end{document}
