Project Details v3.2 and master tex doc

--- a/2_ProjectDescription/A02_ProjectDescription_averseng.tex
+++ b/2_ProjectDescription/A02_ProjectDescription_averseng.tex
@@ -28,7 +28,7 @@ Key objectives of the proposed project(s) of the ETH Fellow, methods to be emplo
 \noindent\fbox{%
 	\parbox{\textwidth}{%
 		Integral equations are a class of mathematical methods to recast time-harmonic scattering problems into functional equations satisfied by surface densities defined on the scattering obstacle. Various techniques are known to approximate the solution of those equations numerically. In many cases, the system matrix of the discrete problem is ill-conditioned. Unfavorable cases typically involve scatterers with singularities like edges or conical points, and very low / very high frequency regimen. 
-		In this research project, we aim at designing new numerical schemes for integral equations that are well conditioned, able to deal with complex geometry of the scatterers as well as low and high frequency. Mathematical analysis will be used to prove rigorously the favorable properties of those new methods. Moreover, the methods will be systematically implemented and tested numerically to illustrate the theoretical findings. 
+		In this research project, we aim at designing new numerical schemes for integral equations that are well conditioned, able to deal with complex geometry of the scatterers and robust in the low and high frequency limits. Mathematical analysis will be used to prove rigorously the favorable properties of those new methods. Moreover, the methods will be systematically implemented and tested numerically to illustrate the theoretical findings. 
 		The first method we will design is a combined-field method for multi-screens. Multi-screens are among the most general and complex types of scatterers that are currently tackled by the litterature. Combined field methods are a known class of methods for integral equations that are very efficient for simple scatterers but have failed for simple screens. The recent formalism of multi-screens seems perfectly fitted for the application of this idea and our preliminary numerical tests indicate that the idea is extremely promising. 
 		The second method is a conformal mapping preconditioner for integral equations on polygons. This is a generalization of the applicant’s thesis work. The heart of the idea is a simple identity relating the conformal mapping of the polygon into a circle to the Dirichlet-Neumann operator. This new understanding of the Dirichlet-Neumann operator translates into a new preconditioner and hints at a new kind of theoretical tools to analyze integral equations on polygons. Very promising preliminary analysis and numerical tests are readily available. 
 		Long term, we have in mind the following objectives. Pursue generalizations of the previous ideas to increasing levels of complexity, to fill the gap between theory and practical applications. Especially adapting all those methods to the electromagnetic integral equations in dimensions 3.
@@ -36,6 +36,7 @@ Key objectives of the proposed project(s) of the ETH Fellow, methods to be emplo
 }
 
 \section*{2.2 Project details}
+(rationale for the proposed work, goals, experimental approach and/or methods, milestones, expected output, specific role of the ETH Fellow, timetable; not to exceed 5 pages)
 
 \subsection*{Introduction}
 
@@ -56,7 +57,7 @@ Usually, practical applications involve the last two kinds of waves, at high fre
 
 Among the standard mathematical tools most adapted to this task are the formalism of integral equations and the Galerkin boundary element method (BEM). Reference monographs include e.g. \cite{mclean2000strongly,sauter2010boundary}). The discretization of integral equations by BEM leads to dense linear systems, which, in real-life applications, often have more than $10^6$ unknowns. This makes it prohibitive to solve the linear system by a direct method such as LU factorization, and instead, it is classical to use iterative methods such as GMRES \cite{saad1986gmres}.
 
-For the so-called first-kind integral equations, powerful mesh-related convergence results are well-known, but the linear systems are notoriously ill-conditioned, causing the iterative solvers to progress very slowly. Active research has been devoted to this issue in the past 30 years. On the one hand, some teams have targeted the iteration (matrix-vector product) time by developing compression and acceleration methods e.g. Fast Multipole Methods \cite{greengard1987fast} and H-matrices \cite{hackbusch1999sparse}. On the other hand, other teams have focused on finding suitable preconditioners. In this branch, \cite{steinbach1998construction} was a pioneer work. 
+For the so-called first-kind integral equations, powerful mesh-related convergence results are well-known, but the linear systems are notoriously ill-conditioned, causing the iterative solvers to progress very slowly. Active research has been devoted to this issue in the past 30 years. On the one hand, some teams have targeted the iteration (matrix-vector product) time by developing compression and acceleration methods e.g. Fast Multipole Methods \cite{greengard1987fast} and H-matrices \cite{hackbusch1999sparse}. On the other hand, other teams have focused on finding suitable preconditioners in order to reduce the number of GMRES iterations. In this branch, \cite{steinbach1998construction} was a pioneer work. 
 
 Second-kind integral equations on the other hand are known to enjoy better stability with respect to discretization parameters, and for this reason, in many instances, researchers have tried to avoid the use of first-kind integral equations despite their simplicity. Nevertheless, the approximation properties of the second-kind formulations are less clear, and they degenerate for complex scatterers such as screens. 
 
@@ -71,13 +72,13 @@ The obstacles become complex when they are not smooth domains or Lipschitz domai
 
 \subsubsection*{Dependance in the frequency}
 
-Although optimal preconditioners are by now available for scattering problems by Lipschitz domains and screens, \cite{steinbach1998construction,hiptmair2006operator}, it is a difficult matter to analyze the preconditioning performance in terms of the frequency number. The English school has been concerned with theoretical asymptotic analysis of the condition number of the classical integral equations without preconditioners \cite{chandler2020high} and the use of high-frequency solutions as trial functions in the Galerkin setting to improve the convergence rate \cite{chandlerWilde2015high}. Besides the popular Calder\'{o}n preconditioners \cite{christiansen2000preconditionneurs,christiansen2002preconditioner}, which have recently been adapted to the screen context \cite{bruno2012second}  ``analytic preconditioners" based on pseudo-differential calculus which exhibit good frequency robustness \cite{antoine2007generalized} were proposed, which entertain a close link with regularized combined-field integral equations \cite{buffa2005regularized}. Although the frequency robustness properties are clear and extensively surveyed e.g. \cite{boubendir2014well}, there is no mathematical theory adapted to the study of this asymptotic robustness as to now. There is a feeling in the community that pseudo-differential analysis, which is often involved in constructing those robust preconditioners, should also play a role in providing quantitative estimates for this frequency dependence buch such desirable analysis has not been achieved yet. Some recent activity around semi-classical analysis seems to go in the right direction \cite{galkowski2019wavenumber}. I will attend a conference on this topic in June 2021 at the university of Bath. 
+Although optimal preconditioners are by now available for scattering problems by Lipschitz domains and screens, \cite{steinbach1998construction,hiptmair2006operator}, it is a difficult matter to analyze the preconditioning performance in terms of the frequency number. The English school has been concerned with theoretical asymptotic analysis of the condition number of the classical integral equations without preconditioners \cite{chandler2020high} and the use of high-frequency solutions as trial functions in the Galerkin setting to improve the convergence rate \cite{chandlerWilde2015high}. Besides the popular Calder\'{o}n preconditioners \cite{christiansen2000preconditionneurs,christiansen2002preconditioner}, which have recently been adapted to the screen context \cite{bruno2012second},  ``analytic preconditioners" based on pseudo-differential calculus which exhibit good frequency robustness \cite{antoine2007generalized} have been proposed, which entertain a close link with regularized combined-field integral equations \cite{buffa2005regularized}. Although the frequency robustness properties are clear in practice and extensively surveyed e.g. \cite{boubendir2014well}, there is no mathematical theory adapted to the study of this asymptotic robustness as to now. There is a feeling in the community that pseudo-differential analysis, which is often involved in constructing those robust preconditioners, should also play a role in providing quantitative estimates for this frequency dependence buch such desirable analysis has not been achieved yet. Some recent activity around semi-classical analysis seems to go in the right direction \cite{galkowski2019wavenumber}. I will attend a conference on this topic in June 2021 at the university of Bath. 
 
 
 \subsection*{Own work}
 
 During my PhD thesis, I have contributed to the research on compression and acceleration methods for the linear systems coming from boundary element methods \cite{averseng2017fast}. 
-On the other hand, I worked on new high-frequency preconditioners for acoustics integral equations on screens in dimension 2. The first publication on this topic \cite{alouges2019new} presents the analytical framework and numerical testing. The new preconditioners are analogs of those of \cite{antoine2007generalized} and present similar frequency robustness, but this time on a screen context. A significant advantage of the method is that the preconditioners obtained are ``quasi-local" in the sense that their use involve only sparse matrix, as opposed to Calder\'{o}n preconditioners which are dense and require an additional compression steps. On the other hand, \cite{averseng2019pseudo} is a more in-depth theoretical paper in which I develop a new type of pseudo-differential calculus on open curves that was used to design the preconditioners introduced in the first paper. This pseudo-differential calculus features the possibility of computing symbols of the layer potentials up to arbitrary orders and is probably a first step in assessing the frequency robustness of this approach. 
+On the other hand, I worked on new high-frequency preconditioners for acoustics integral equations on screens in dimension 2. The first publication on this topic \cite{alouges2019new} presents the analytical framework and numerical testing. The new preconditioners are analog to those of \cite{antoine2007generalized} and present similar frequency robustness, but this time on a screen context. A significant advantage of the method is that the preconditioners obtained are ``quasi-local" in the sense that their use involve only sparse matrix, as opposed to Calder\'{o}n preconditioners which are dense and require an additional compression steps. On the other hand, \cite{averseng2019pseudo} is a more in-depth theoretical paper in which I develop a new type of pseudo-differential calculus on open curves that was used to design the preconditioners introduced in the first paper. This pseudo-differential calculus features the possibility of computing symbols of the layer potentials up to arbitrary orders and is probably a first step in assessing the frequency robustness of this approach. 
 
 
 
@@ -86,11 +87,11 @@ On the other hand, I worked on new high-frequency preconditioners for acoustics 
 
 \subsubsection*{Frequency-robust preconditioners on 3D screens}
 
-Although the numerical method published in \cite{alouges2019new} is only adapted to 2-dimensional contexts, generalizations to 3-dimensions seem possible and have been attempted in the last chapter of my thesis, with promising results. I will continue my research on this topic in order to make a publication for scalar scattering problems by screens in 3D. In turn, a natural extension to electromagnetic scattering will be possible, as a natural combination of my work and the host laboratory \cite{hiptmair2019preconditioning}. 
+Although the numerical method published in \cite{alouges2019new} is only adapted to 2-dimensional contexts, generalizations to 3-dimensions seem possible and have been attempted in the last chapter of my thesis, with promising results. I will continue my research on this topic in order to make a publication for scalar scattering problems by screens in 3D. In turn, a natural extension to electromagnetic scattering will be possible, as a natural combination of my work and the host laboratory \cite{hiptmair2019preconditioning}. Another possible direction is to extend the pseudo-differential calculus of \cite{averseng2019pseudo} to screens in 3D. 
 
 \subsubsection*{Conformal preconditioners}
 
-Another very natural generalization of my thesis work is the treatment of polygonal scatterers in 2D. We have recently found a mathematical identity that draws a close link between preconditioners and conformal mappings, which hints at completely new and powerful preconditioners adapted to corner singularities. A middle-term objective of this research project will be to analyze rigorously this idea and implement it efficiently. The expected output is a method that completely solves the question of polygons in 2D at any frequency, which would be a significant achievement in the domain. In addition, it might be possible to transport the pseudo-differential to the polygon via the conformal mapping, which would be a very interesting novelty. 
+Another very natural generalization of my thesis work is the treatment of polygonal scatterers in 2D. We have recently found a mathematical identity that draws a close link between preconditioners and conformal mappings, hinting at completely new and powerful preconditioners adapted to corner singularities. A middle-term objective of this research project will be to analyze rigorously this idea and implement it efficiently. The expected output is a rather complete framework to solve scattering problems by polygons in 2D at any frequency, which would be a significant achievement in the domain. In addition, it might be possible to transport the pseudo-differential to the polygon via the conformal mapping, which would be a very interesting novelty. 
 
 This work would also open some possible breakthrough for 3D singularities such as wedges, which are omnipresent in practical applications. Exploring this idea is a long-term objective of this project.
 
@@ -100,7 +101,7 @@ This work would also open some possible breakthrough for 3D singularities such a
 Another promising idea is the possibility of formulating ``combined-field" integral equations for multi-screens. Combined field formulations are well-known for smooth scatterers and have been introduced more than 50 years ago \cite{brakhage1965dirichletsehe} as a way to guarantee the well-posedness of the equation at any wave frequency. For screens, combined field integral equations have been abandoned, because they degenerate when the obstacle no longer has interior. 
 However, we have recently discovered that the formalism of multi-screens restores a ``virtual" interior to the obstacle, and a combined-field equation can be formulated mathematically without difficulty. Preliminary numerical simulations have shown the power of this idea and it will be an immediate objective of this project to implement this idea and analyze it rigorously. This would lead without doubts to an important publication in our field. 
 
-Lastly, after his thesis, the applicant has done a 6 month post-doctorate with Xavier Claeys, a former student of the host professor, on the topic of preconditioning integral equations on multi-screens using a domain decomposition approach. The resulting method is expected to be very robust and versatile. This collaboration will be continued during the post-doc and eventually lead to a publication. 
+Lastly, after his thesis, I have done a 6 month post-doctorate with Xavier Claeys, a former student of Pr. Hiptmair, on the topic of preconditioning integral equations on multi-screens using an additive Schwarz approach (see e.g. \cite{marchand2019two}). The resulting method is expected to be very robust and versatile. This collaboration will be continued during the post-doc and eventually lead to a publication. 
 
 
 \subsection*{Timetable}
@@ -246,6 +247,11 @@ A timetable of the research project can be proposed as follows:
 		\newblock Compact equivalent inverse of the {E}lectric {F}ield
 		{I}ntegral {O}perator on screens.
 		\newblock {\em Integral Equations and Operator Theory} 92(1), 2020.
+
+		\bibitem{marchand2019two}
+		P.~Marchand, P.~Jolivet, P.~H.~Tournier, X.~Claeys and F.~Nataf
+		\newblock Two-level preconditioning for h-version boundary element approximation of hypersingular operator with GenEO.
+		\newblock {Archives ouvertes} preprint hal-0218871, 2019.
 
 		
 		\bibitem{mclean2000strongly}
