--- a/4_careerGoalApplicant/A04_CareerGoals_Averseng.tex
+++ b/4_careerGoalApplicant/A04_CareerGoals_Averseng.tex
@@ -9,7 +9,7 @@
 \maketitle
 
 Here is a brief outline of my career goals.
-Working at ETH with Pr. Hiptmair and his team is a great opportunity for me to work with one of the leading teams in my field. Especially, recent breakthroughs by Hiptmair, Claeys and Urzua-Torres have opened great perspectives and I will now be part of this innovative dynamic. I will consolidate my research skills, extend my reputation and network, together with getting experience in teaching. 
+Making a post-doc at ETH with Pr. Hiptmair and his team is a great opportunity for me to work with one of the leading teams in my field. Especially, recent breakthroughs by Hiptmair, Claeys and Urzua-Torres have opened great perspectives and I will now be part of this innovative dynamic. I will consolidate my research skills, extend my reputation and network, together with getting experience in teaching. 
 
 In the mean time, I will also attend the conferences organized each year about Boudary Element Methods and present the new developments of my work. I am greatly interested but not yet very familiar with the work of the English school in integral equations. I will attend an important conference in the university of Bath in 2021 on the topic of semi-classical analysis. I believe that this mathematical tool could play an essential role in the field of integral equation in the coming future. 
 
